--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 <div id="leftmenu">
 <h3>Links<h3>
 <ul>
-<li><a href="browse.html">C</a></li>
-<li><a href="browse.html">C++</a></li>
-<li><a href="browse.html">Java</a></li>
-<li><a href="browse.html">Python</a></li>
-<li><a href="browse.html">web designing</a></li>
-<li><a href="browse.html">Cyber Security</a></li>
-<li><a href="browse.html">web programming</a></li>
-<li><a href="browse.html">Machine Learning</a></li>
-<li><a href="browse.html">Game Development</a></li>
+<li><a href="https://fresh2refresh.com/c-programming/c-basic-program/">C</a></li>
+<li><a href="https://www.w3schools.com/cpp/">C++</a></li>
+<li><a href="https://www.w3schools.com/java/java_intro.asp">Java</a></li>
+<li><a href="https://www.w3schools.com/python/">Python</a></li>
+<li><a href="https://webflow.com/blog/web-design-for-beginners">web designing</a></li>
+<li><a href="https://www.kaspersky.co.in/resource-center/definitions/what-is-cyber-security">Cyber Security</a></li>
+<li><a href="https://slideplayer.com/slide/9823074/">web programming</a></li>
+<li><a href="https://www.expert.ai/blog/machine-learning-definition/">Machine Learning</a></li>
+<li><a href="https://www.freecodecamp.org/news/what-is-game-development/#:~:text=Game%20Development%20is%20the%20art,player%20engagement%20and%20level%20design.">Game Development</a></li>
 </ul>
 </div><!--leftmenu ends-->
 <div id="content">
